[gd_scene load_steps=15 format=2]

[ext_resource path="res://Src/GUI/EnemyGUI/EnemyGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Enemy/Tank/TankEnemy.gd" type="Script" id=2]
[ext_resource path="res://Src/Components/Limiter.gd" type="Script" id=3]
[ext_resource path="res://Src/Components/DiceCore/DiceCore.gd" type="Script" id=4]
[ext_resource path="res://Src/Components/Emitter.gd" type="Script" id=5]
[ext_resource path="res://Src/Objects/EnemyBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/Components/DiceWrapper.gd" type="Script" id=7]
[ext_resource path="res://Src/Components/DiceCore/Multiplier/Multiply3DiceCore.tres" type="Resource" id=8]
[ext_resource path="res://Assets/Enemy/enemy-tank.png" type="Texture" id=9]
[ext_resource path="res://Assets/Font/Spritecoder_Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Src/Enemy/on-hit-shader.tres" type="Material" id=11]



[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 40 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 1, 0.988235, 1, 1 )
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34, 33 )

[node name="TankEnemy" type="KinematicBody2D"]
material = ExtResource( 11 )
script = ExtResource( 2 )
immune_to_even = false
immune_to_odd = true
max_health = 5

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 11 )
texture = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 32, 32, 32, -32, -32, -32, -32, 32 )
__meta__ = {
"_editor_description_": ""
}

[node name="EnemyGUI" parent="." instance=ExtResource( 1 )]

[node name="EnemyGUI" parent="EnemyGUI" index="0"]
margin_top = -120.0
margin_bottom = -120.0

[node name="DiceWrapper" type="Node" parent="."]
script = ExtResource( 7 )

[node name="DiceCore" type="Node" parent="DiceWrapper"]
script = ExtResource( 4 )
dice_core_resource = ExtResource( 8 )

[node name="Limiter" type="Node" parent="DiceWrapper"]
script = ExtResource( 3 )

[node name="DiceTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Emitter" type="Node2D" parent="."]
script = ExtResource( 5 )
bullet_scn = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
margin_left = -19.0
margin_top = -31.0
margin_right = 21.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "O"
valign = 1

[node name="ShaderTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HazardToPlayer" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardToPlayer"]
shape = SubResource( 3 )

[connection signal="behaviour_changed" from="." to="EnemyGUI" method="_on_behaviour_changed"]
[connection signal="health_changed" from="." to="EnemyGUI" method="_on_health_changed"]
[connection signal="dice_rolled" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_dice_rolled"]
[connection signal="limiter_changed" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_limiter_changed"]
[connection signal="number_changed" from="DiceWrapper" to="EnemyGUI" method="_on_DiceWrapper_number_changed"]
[connection signal="timeout" from="DiceTimer" to="." method="reroll"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ShaderTimer" to="." method="_on_ShaderTimer_timeout"]

[editable path="EnemyGUI"]
